@@ -1,3 +1,8 @@
+2010-04-08  nineties <nineties48@gmail.com>
+
+	* rlc1: implemented conditional branch
+	* rlc1: replaced ! operator to @
+
 2010-04-07  nineties <nineties48@gmail.com>
 
 	* rlc1: replaced 'void' to '()' (unit)
